# PlayBox

./: .gitignore  capacitor.config.d.ts.map  capacitor.config.js  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.node.json  vite.config.d.ts.map  vite.config.js  vite.config.ts
.github/workflows/: ci.yml
android/: build.gradle
android/app/: build.gradle
docs/: README.md
docs/plan/: .eslintrc.cjs  LICENSE  PlayBox_plan.md  PlayBox_synthesis.md  capacitor.config.ts  index.html  package.json  prompt.md  structure.md  tsconfig.json  vite.config.ts
docs/plan/public/: manifest.json  robots.txt
docs/plan/src/: App.tsx  game-registry.generated.ts  game-registry.ts  main.tsx  vite-env.d.ts
docs/plan/tasks/: 1 - Project Scaffolding and Configuration.md  2 - Platform Shell Basic UI.md  4 - MVP Games (3 Games).md
docs/plan/worklogs/: 2 - worklog.md  3 - worklog.md  6 - worklog.md
docs/reports/: PlayBox_cicd_report.md
scripts/: check-game-interface.ts  copy-404.js  generate-game-registry.ts
src/: App.tsx  game-registry.generated.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/feedback/: EmptyState.tsx  Toast.tsx
src/components/game/: GameCard.tsx  GameOverlay.tsx
src/components/layout/: Header.tsx
src/components/ui/: SearchBar.tsx
src/contexts/: GameContext.tsx
src/hooks/: useFavorites.ts
src/lib/: audio.ts  fullscreen.ts  platform.ts  storage.ts
src/pages/: FavoritesPage.tsx  GamePage.tsx  HomePage.tsx  SettingsPage.tsx
src/styles/: globals.css
src/types/: game.ts
(+59 files in other folders)
