[package]
name = "playbox"
version = "0.1.0"
description = "PlayBox — Web-Based Game Station Platform"
authors = ["Ali-F-Harandi"]
license = "MIT"
repository = "https://github.com/BilKoChal/PlayBox"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
